# datagrid

./: .gitignore  AGENTS.md  CODEX_SKILLS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  trace-vitest.cjs  tsconfig.base.json  vitest.config.ts
backend/: .env.db.dev  .env.db.prod  .env.db.prod.example  .env.dev  .env.prod  .env.prod.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260504_0001_create_grid_demo_rows.py  20260504_0002_create_server_demo_row_events.py  20260504_0003_create_server_demo_operation_history.py  20260505_0001_make_grid_demo_value_nullable.py  20260505_0002_create_grid_revisions.py  20260505_0003_workspace_scope_grid_revisions.py  20260505_0004_add_workspace_id_to_grid_demo_rows.py  20260505_0005_scope_server_demo_operations_and_cell_events_by_workspace.py  20260506_0001_add_user_session_scope_to_server_demo_operations.py  20260506_0002_add_table_id_to_server_demo_operations.py  20260506_0003_create_server_demo_change_events.py  (+1 more)
backend/app/: main.py
backend/scripts/: bench_server_demo_grid.py
backend/tests/: test_affino_grid_backend_package.py  test_grid_consistency.py  test_grid_invalidation.py  test_grid_projection.py  test_grid_revision_counter.py  test_grid_revision_workspace.py  test_grid_values.py  test_server_demo_changes.py  test_server_demo_edits.py  test_server_demo_history_stack.py  test_server_demo_read.py  test_server_demo_table.py  test_workspace_context.py
(+176 files in other folders)
