[project]
name = "demo-backend"
version = "0.1.0"
description = "Minimal FastAPI backend for demo"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Anton Pavlov", email = "anton.pavlov@ge.com" }
]

dependencies = [
    "fastapi>=0.122.0",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy>=2.0.44",
    "psycopg[binary]>=3.1",
    "asyncpg>=0.31.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "alembic>=1.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.21.0",
]

[tool.uv]
managed = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
